# anveshar

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml
anveshar/: __init__.py  analysis.py  cli.py  engine.py  engine_prompt.md  llm.py  pipeline.py  schema.py  score.py  workflow.py
artifacts/: PUBLISHED_ARTIFACTS.md  anveshar_atlas_explorer.html  anveshar_training.html  concord_demokit_artifact.html  concord_hub_artifact.html  concord_multimodal_artifact.html  concord_research_artifact.html
data/: actionable_drivers.json  induced_dependencies.json  rare_cancers_master_list.csv  rare_cancers_master_list.md  rare_conditions_catalog.json  sequence_models.json  tissue_agnostic_approvals.json
docs/: CLAUDE_SCIENCE.md  DEMO_SCRIPT.md  FACTCHECK.md  WORKFLOW.md  architecture.md  deep_dive_renal_medullary.md  example_dossier_rectal_net.md  example_dossier_renal_medullary.md  gene_therapy.md  interfaces.md  novelty.md  rare_disease_demo.md  rare_disease_expansion.md  rectal_net_finding.md  uveal_melanoma_finding.md  variant_interpretation_methodology.md
examples/: README.md  adenoid_cystic_carcinoma.json  alveolar_soft_part_sarcoma.json  atrt.json  cholangiocarcinoma.json  chordoma.json  dermatofibrosarcoma_protuberans.json  ewing_sarcoma.json  gastrointestinal_stromal_tumor.json  medullary_thyroid_carcinoma.json  merkel_cell_carcinoma.json  nut_carcinoma.json  pheochromocytoma_and_paraganglioma.json  rectal_net.json  renal_medullary.json  uveal_melanoma.json
notebooks/: 01_concord_pipeline_harness.ipynb  01_pipeline_harness.ipynb  02_catalog_analyses.ipynb  (+11 more)
(+106 files in other folders)
